# bcrpy

./: .gitignore  .readthedocs.yaml  CONTRIBUIR.md  CONTRIBUTING.md  CONTRIBUTING_ESP.md  README.md  flask-bcrpget  metadatos  mydf.p  pyproject.toml  pytest.ini  requirements.in  requirements_docs.in  script.py  vercel-bcrpy
.github/workflow/: PUBLISH.md  publish.yml
BCRPclient/: __init__.py  main.py
_old/: metadatos
bcrpy/: __init__.py  _fetcher.py  _metadata.py  anexo.py  hacha.py  lang.py  main.py  utils.py
bcrpy/_old/: utils.py
docs/source/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
llm_models/: README.md
tests/: test_module.py
