[tool.poetry]
name = "bcrpy"
version = "2.1.0"
description = "An API client for the extraction, query, and analysis of the BCRPData database from the Central Reserve Bank of Peru (BCRP)."
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
tqdm = "^4.65.0"
tabulate = "^0.9.0"
termcolor = "^2.2.0"
colorama = "^0.4.6"
pathos = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
