[tool.poetry]
name = "bcrpy"
version = "3.1.0"
description = "An API client for the extraction, query, and analysis of the BCRPData database from the Central Reserve Bank of Peru (BCRP)."
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
numpy = "^1.24.4"  # Adjust this based on your Python version.
pandas = "^2.0"  # Ensures compatibility with `numpy`.
termcolor = "^2.4.0" 
tqdm = "^4.65.0"
tabulate = "^0.9.0"
colorama = "^0.4.6"
pathos = "^0.3.1"
bottleneck = "^1.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
